--- a/wl2.html
+++ b/wl2.html
@@ -8,7 +8,7 @@
     <h1>Tiere des Waldes</h1>
     <h2>Babyfuchs</h2>
     <figure>
-      <img src="C:\Users\Lisa\Desktop\html2\wl2\images\mammals-3218028_960_720.jpg" alt="Babyfuchs"/>
+      <img src="images/mammals-3218028_960_720.jpg" alt="Babyfuchs"/>
       <figcaption>Ein kleiner Babyfuchs</figcaption>
     </figure>
 
