--- a/wl2.html
+++ b/wl2.html
@@ -11,8 +11,15 @@
       <img src="images/mammals-3218028_960_720.jpg" alt="Babyfuchs"/>
       <figcaption>Ein kleiner Babyfuchs</figcaption>
     </figure>
-
-        <p>Ein Fuchs ist ein Vertreter der Familie der Hunde (Canidae). Im deutschen Sprachgebrauch ist damit meistens der Rotfuchs gemeint</p>
-    </main>
+    <p>Ein Fuchs ist ein Vertreter der Familie der Hunde (Canidae). Im deutschen Sprachgebrauch ist damit meistens der Rotfuchs gemeint</p>
+        
+    <h2>Eichhörnchen</h2>
+      <figure>
+        <img src="images/tree-3176646_960_720.jpg" alt="Eichhörnchen"/>
+        <figcaption>Ein großes Eichhörnchen</figcaption>
+      </figure>
+    
+      <p>Das Eichhörnchen (Sciurus vulgaris), regional auch Eichkätzchen, Eichkatz(er)l, Eichkater oder niederdeutsch Katteker, ist ein Nagetier aus der Familie der Hörnchen (Sciuridae). Es ist der einzige natürlich in Mitteleuropa vorkommende Vertreter aus der Gattung der Eichhörnchen und wird zur Unterscheidung von anderen Arten wie dem Kaukasischen Eichhörnchen und dem in Europa eingebürgerten Grauhörnchen auch als Europäisches Eichhörnchen bezeichnet</p>
+   </main>
   </body>
 </html>
