--- a/wl2.html
+++ b/wl2.html
@@ -18,8 +18,14 @@
         <img src="images/tree-3176646_960_720.jpg" alt="Eichhörnchen"/>
         <figcaption>Ein großes Eichhörnchen</figcaption>
       </figure>
-    
       <p>Das Eichhörnchen (Sciurus vulgaris), regional auch Eichkätzchen, Eichkatz(er)l, Eichkater oder niederdeutsch Katteker, ist ein Nagetier aus der Familie der Hörnchen (Sciuridae). Es ist der einzige natürlich in Mitteleuropa vorkommende Vertreter aus der Gattung der Eichhörnchen und wird zur Unterscheidung von anderen Arten wie dem Kaukasischen Eichhörnchen und dem in Europa eingebürgerten Grauhörnchen auch als Europäisches Eichhörnchen bezeichnet</p>
-   </main>
+
+      <h2>Spatz</h2>
+      <figure>
+        <img src="images/sparrow-2797009__340.jpg" alt="Spatz"/>
+        <figcaption>Ein Spatz im Winter</figcaption>
+      </figure>
+    
+      <p>Wenn es dem Spatz im Winter zu kalt ist, dann packt er sich in warme Wollkleidung</p>
   </body>
 </html>
